--- a/src/JobItem.css
+++ b/src/JobItem.css
@@ -26,6 +26,8 @@
 	text-transform:uppercase;
 	border: 3px solid;
 	padding:8px 20px;
+  margin-bottom: 1%;
+  margin-top: 1%;
 }
 
 .btn-outlined {
