--- a/src/css/agency.css
+++ b/src/css/agency.css
@@ -436,10 +436,11 @@ header.masthead {
     margin-top: 0; }
 
 section#contact {
-  background-color: #222222;
-  background-image: url("./img/map-image.png");
-  background-repeat: no-repeat;
-  background-position: center; }
+  background-color: lightblue;
+  /*background-image: url("./img/map-image.png");*/
+  /*background-repeat: no-repeat;
+  background-position: center; */
+}
   section#contact .section-heading {
     color: white; }
   section#contact .form-group {
