--- a/src/App.css
+++ b/src/App.css
@@ -23,3 +23,12 @@
   width: 100%;
   color: black;
 }
+
+.page-button {
+    background-color: Transparent;
+    background-repeat:no-repeat;
+    border: none;
+    cursor:pointer;
+    overflow: hidden;
+    outline:none;
+}
